--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
-  "buildCommand": "cd ../.. && yarn install --ignore-engines && yarn turbo run build --filter=@cercasp/web",
+  "buildCommand": "yarn install --ignore-engines && yarn turbo run build --filter=@cercasp/web",
   "installCommand": "yarn install --ignore-engines",
-  "outputDirectory": "apps/web/.next",
-  "framework": "nextjs",
-  "ignoreCommand": "git diff --quiet HEAD^ HEAD ./apps/web/"
+  "outputDirectory": ".next",
+  "framework": "nextjs"
 }
