fix: configuración Vercel para build desde raíz

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,6 +1,7 @@
 {
-  "installCommand": "yarn install",
-  "buildCommand": "yarn build",
-  "outputDirectory": ".next",
-  "framework": "nextjs"
+  "installCommand": "cd ../.. && yarn install --ignore-engines",
+  "buildCommand": "cd ../.. && yarn turbo run build --filter=@cercasp/web",
+  "devCommand": "yarn dev",
+  "framework": "nextjs",
+  "outputDirectory": ".next"
 }
