--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -1,7 +1,3 @@
 {
-  "installCommand": "cd ../.. && yarn install --ignore-engines",
-  "buildCommand": "cd ../.. && yarn turbo run build --filter=@cercasp/web",
-  "devCommand": "yarn dev",
-  "framework": "nextjs",
-  "outputDirectory": ".next"
+  "framework": "nextjs"
 }
